--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,13 @@
   <version>1.0-SNAPSHOT</version>
   <name>messages-queue</name>
   <url>http://maven.apache.org</url>
+
+    <properties>
+    <maven.compiler.source>21</maven.compiler.source>
+    <maven.compiler.target>21</maven.compiler.target>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
+  
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
